# build-a-bot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  buildabot.sh  extern.cc  include.hh  main.cc  selection.json
.github/workflows/: main.yml
